Added image edit controls

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <option value="16">16</option>
             <option value="18">18</option>
             <option value="24">24</option>
-                <option value="32">32</option>
+            <option value="32">32</option>
             <option value="48">48</option>
             <option value="60">60</option>
         </select>
@@ -36,9 +36,9 @@
     </div>
     <div class="menuGroup">
         <h3>Align</h3>
-        <span class="menuItem" onclick="applyStyle('textAlign', 'left')">Left</span>
-        <span class="menuItem" onclick="applyStyle('textAlign', 'center')">Center</span>
-        <span class="menuItem" onclick="applyStyle('textAlign', 'right')">Right</span>
+        <span class="menuItem" onclick="applyAlign('left')">Left</span>
+        <span class="menuItem" onclick="applyAlign('center')">Center</span>
+        <span class="menuItem" onclick="applyAlign('right')">Right</span>
     </div>
     <div class="menuGroup">
         <h3>Color</h3>
@@ -47,6 +47,13 @@
     <div class="menuGroup">
         <h3>Background</h3>
         <input type="color" onchange="applyBodyStyle('backgroundColor', this.value)">
+    </div>
+    <div id="imageControls" style="display: inline; opacity: 0;">
+    <div style="display: inline-flex; border-left: 2px solid #b1b1b1; height: 100%; width: 10px;"></div>
+    <div class="menuGroup">
+        <h3>Image Scale</h3>
+    <input id="imageRange" disabled="true" type="range" max="100" min="0" value="25" onchange="applyStyle('width', this.value + '%')">
+    </div>
     </div>
 </div>
 <div id="mainContent">
